test/domains/compilerErrors/partialQueriedDomain-multiple.good
partialQueriedDomain-multiple.chpl:20: In method 'c_l':
partialQueriedDomain-multiple.chpl:21: error: cannot query part of a domain
partialQueriedDomain-multiple.chpl:21: error: cannot query part of a domain
